# inst414-capstone

./: README.md
alexa-inst414/: LICENSE  Makefile  README.md  pyproject.toml
alexa-inst414/docs/: mkdocs.yml
alexa-inst414/docs/docs/: index.md
alexa-inst414/fintech_roi_ai/: __init__.py  data_cleaning.py  eda_analysis.py  evaluation.py  modeling.py  preprocessing.py  run_eda.py
alexa-inst414/notebooks/: 03_modeling.ipynb
alexa-inst414/reports/tables/: summary_stats.csv
