[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fintech_roi_ai"
version = "0.0.1"
description = "Evaluating how AI adoption affects financial outcomes and ROI in FinTech companies."
authors = [
  { name = "Alexa Chu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fintech_roi_ai"]
include = ["pyproject.toml", "fintech_roi_ai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fintech_roi_ai"]
force-sort-within-sections = true

